--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-  "name": "Obsidian Tasks",
-  "short_name": "Tasks",
-  "start_url": "./index.html",
+  "name": "タスク追加特化システム",
+  "short_name": "Task Entry",
+  "start_url": "./index.html", 
   "display": "standalone",
   "background_color": "#f3f4f6",
-  "theme_color": "#6366f1",
-  "orientation": "portrait",
+  "theme_color": "#4f46e5",
   "icons": [
     {
       "src": "icon-192.png",
